# tally

./: README.md  index.html  main.js  package-lock.json  package.json  style.css
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
